FIX - table-view height jumping

--- a/frontend/coffee-scraper/src/app/home/feature/home.component.scss
+++ b/frontend/coffee-scraper/src/app/home/feature/home.component.scss
@@ -9,7 +9,7 @@
     margin: auto auto;
 }
 .test-box {
-    min-height: 72vh;
+    min-height: 80vh;
     width: 80%;
     background-color: gray;
     border-radius: 1em;
